--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.bitbucket.alt.circles"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:label="@string/app_name" >
+          package="org.bitbucket.alt.circles"
+          android:versionCode="1"
+          android:versionName="1.0">
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <application android:icon="@drawable/icon"
+                 android:label="@string/app_name"
+                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity android:name=".CirclesActivity"
                   android:label="@string/app_name">
             <intent-filter>
